# app/public-swagger.yml
@@ -41,89 +41,6 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Errors'
-    post:
-      description: Register the urls of the service. If the id of the service exists, the existing configuration with the same id is removed.
-      operationId: register
-      security:
-        - basic_auth: []
-      tags:
-        - Services
-      produces:
-        - application/json
-        - application/vnd.api+json
-      parameters:
-        - name: service
-          in: body
-          description: Service to add
-          required: true
-          schema:
-            $ref: '#/definitions/Service'
-      responses:
-        200:
-          description:  List all urls registered by the service
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/ServiceUrl'
-        400:
-          description: Validate error
-          schema:
-            $ref: '#/definitions/Errors'
-        500:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Errors'
-  /gateway/service/all:
-    delete:
-      description: Remove all Services of the database
-      operationId: unregisterAll
-      security:
-        - basic_auth: []
-      tags:
-        - Services
-      produces:
-        - application/json
-        - application/vnd.api+json
-      responses:
-        200:
-          description:  Number of services removed
-          schema:
-            $ref: '#/definitions/ServicesRemoved'
-        500:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Errors'
-  /gateway/service/{id}:
-    delete:
-      description: Remove the service specified in the parameter
-      operationId: unregister
-      security:
-        - basic_auth: []
-      tags:
-        - Services
-      produces:
-        - application/json
-        - application/vnd.api+json
-      parameters:
-        - name: id
-          in: path
-          description: ID of service
-          required: true
-          type: string
-      responses:
-        200:
-          description:  Number of services removed
-          schema:
-            $ref: '#/definitions/ServicesRemoved'
-        404:
-          description: Service not found
-          schema:
-            $ref: '#/definitions/Errors'
-        500:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Errors'
-
 definitions:
   Service:
     type: object
